--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tools/apps/hex_viewer"]
 	path = tools/apps/hex_viewer
 	url = https://github.com/prplecake/flipperzero-hex-viewer
+[submodule "utilities/FZEasyMarauderFlash"]
+	path = utilities/FZEasyMarauderFlash
+	url = https://github.com/prplecake/FZEasyMarauderFlash
